--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 spring.jpa.database=MYSQL
 spring.datasource.platform=mysql
-spring.datasource.url=jdbc:mysql://localhost:[ポート番号]/[DB名]
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://localhost:3306/bookmanager
+spring.datasource.username=root
+spring.datasource.password=rootpass
 spring.jpa.hibernate.ddl-auto=none
 logging.level.root=WARN
 
-server.port=[ポート番号]
-
+server.port=8082
+endpoints.enabled=false
+management.add-application-context-header=false
